--- a/views/components/post-jobs/post.ejs
+++ b/views/components/post-jobs/post.ejs
@@ -4,7 +4,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
 <body class="bg-gray-100">
-    <div class="relative pt-20">
+    <div class="relative pt-20 max-sm:pt-12">
         <img alt="A close-up of a person typing on a laptop with code on the screen" class="w-full h-96 object-cover" height="600" src="https://storage.googleapis.com/a1aa/image/4QzCIo7APc1mIihdHM_DuDvX_W4PhUwEKq2-2OVFZgU.jpg" width="1920"/>
         <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-center items-start text-left px-4 md:px-16">
             <h1 class="text-white text-4xl md:text-5xl font-bold mb-4">
